--- a/gridvid-core/pom.xml
+++ b/gridvid-core/pom.xml
@@ -18,6 +18,11 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>2.2.0</version>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
